--- a/app/views/factory/admin/products/_buy/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tr.html.erb
@@ -12,4 +12,4 @@
     </div>
   </td>
 </tr>
-<%= render partial: 'production', collection: model.productions, as: :model %>
+<%= render partial: 'production', layout: 'production_tr', collection: model.productions, as: :model %>
