--- a/app/views/factory/admin/products/_buy/_production.html.erb
+++ b/app/views/factory/admin/products/_buy/_production.html.erb
@@ -14,30 +14,41 @@
   </table>
 </td>
 <td>
+  <table>
   <% model.upstream_provides.each do |pp| %>
-  <div>
-    <span class="pr-1"><%= pp.provider.name %></span>
+  <tr>
+    <td><%= pp.provider.name %></td>
+    <td>
     <% if item = @cart.organ_item(purchase_id: model.id, good_id: pp.upstream_production_id) %>
       <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
     <% else %>
       <%= render partial: 'add_purchase_cart', locals: { cart: @cart, item_con: 'trade/in/items', model: model, good_id: pp.upstream_production_id } %>
     <% end %>
-  </div>
+    </td>
+  </tr>
   <% end %>
-  <div>
+  <tr>
   <% if item = @cart.organ_item(purchase_id: model.id, good_id: nil) %>
-    <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
-    <span><%= item.organ&.name %></span>
+
+    <td><%= item.organ&.name %>
     <%= button_to({ controller: 'in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil } }) do %>
       <i class="fa-solid fa-times has-text-danger"></i>
     <% end if item.organ_id.present? %>
     <%= button_to({ controller: 'in/items', action: 'edit_assign', id: item.id }) do %>
       <i class="fa-solid fa-hand-point-right has-text-info"></i>
     <% end %>
+    </td>
+      <td>
+        <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
+      </td>
   <% else %>
+      <td></td>
+      <td>
     <%= render partial: 'add_purchase_cart', locals: { cart: @cart, item_con: 'trade/in/items', model: model, good_id: nil } %>
+      </td>
   <% end %>
-  </div>
+  </tr>
+  </table>
 </td>
 <td>
   <%= button_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
