--- a/app/views/factory/in/provides/_base/_provider_search.html.erb
+++ b/app/views/factory/in/provides/_base/_provider_search.html.erb
@@ -6,7 +6,7 @@
     <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search') %>" data-typer-method-value="post">
       <%= f.hidden_field :provider_id, data: { typer_target: 'value' } %>
       <div class="control has-icons-left">
-        <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', data: { typer_target: 'input' } %>
+        <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', autocomplete: 'off', data: { typer_target: 'input' } %>
         <span class="icon is-left"><i class="fa-solid fa-search"></i></span>
       </div>
       <div data-typer-target="content" class="panel" id="providers_content"></div>
