--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -6,7 +6,7 @@
   </a>
   <div class="menu-list" data-empty-target="content">
     <%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'factory/admin/product_taxons' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
-    <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
+    <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, data: { turbo_frame: 'body' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
     <%= link_to t('factory.in.productions.index.title'), { controller: 'factory/in/productions' }, class: active_helper(controllers: ['productions'], active: 'is-active') %>
   </div>
 </div>
