--- a/app/views/factory/admin/provideds/_new_form.html.erb
+++ b/app/views/factory/admin/provideds/_new_form.html.erb
@@ -1,4 +1,12 @@
-<%= form_with model: @part_provider, url: { action: 'create' } do |f| %>
-  <%= render partial: 'form', locals: { f: f } %>
-  <%= f.submit %>
+<%= form_with model: @part_provider, url: { action: 'create' }, class: 'modal-card' do |f| %>
+  <header class="modal-card-head">
+    <p class="modal-card-title"><%= t('.title') %></p>
+    <button class="delete" data-action="modal#close"></button>
+  </header>
+  <section class="modal-card-body">
+    <%= render partial: 'form', locals: { f: f } %>
+  </section>
+  <footer class="modal-card-foot is-block">
+    <%= f.submit %>
+  </footer>
 <% end %>
