--- a/app/views/factory/in/provides/_new_form.html.erb
+++ b/app/views/factory/in/provides/_new_form.html.erb
@@ -1,5 +1,13 @@
-<%= form_with model: @provide, url: { action: 'create' } do |f| %>
-  <%= render 'error_messages', target: f.object  %>
-  <%= render partial: 'provider_search', locals: { f: f } %>
-  <%= f.submit %>
+<%= form_with model: @provide, url: { action: 'create' }, class: 'modal-card' do |f| %>
+  <header class="modal-card-head">
+    <p class="modal-card-title"><%= t('.title') %></p>
+    <button class="delete" data-action="modal#close"></button>
+  </header>
+  <section class="modal-card-body">
+    <%= render 'error_messages', target: f.object  %>
+    <%= render partial: 'provider_search', locals: { f: f } %>
+  </section>
+  <footer class="modal-card-foot is-block">
+    <%= f.submit %>
+  </footer>
 <% end %>
