--- a/app/views/factory/in/provides/_base/_index_tbody.html.erb
+++ b/app/views/factory/in/provides/_base/_index_tbody.html.erb
@@ -8,6 +8,6 @@
 <td>
   <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm'), turbo_scroll: true } }) do %>
     <i class="fa-solid fa-trash has-text-danger"></i>
-    <span class="pl-1">移除供应商</span>
+    <span class="pl-1"><%= t('.destroy.title') %></span>
   <% end %>
 </td>
