the logic for update

--- a/app/views/layouts/agent.html.erb
+++ b/app/views/layouts/agent.html.erb
@@ -1,7 +1,7 @@
 <%= render layout: 'layouts/application_head' do %>
   <%= render 'nav_bar' %>
   <%= render 'alert' %>
-  <main class="container">
+  <main class="container pt-4">
     <%= render 'breadcrumb' %>
     <div class="columns">
       <%= yield %>
