--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -5,7 +5,7 @@
   </div>
   <p class="has-text-grey"><%= model.scene&.title %></p>
 </td>
-<td><%= model.products_count %></td>
+<td><%= link_to model.products_count, { controller: 'products', product_taxon_id: model.id } %></td>
 <td>
   <p>
     <%= link_to({ controller: 'products', product_taxon_id: model.id }, class: 'tag is-primary') do %>
