--- a/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tfoot.html.erb
@@ -3,6 +3,9 @@
     <th colspan="3"></th>
     <th>
       <div id="cart_nav">
+        <%= link_to({ controller: 'trade/in/carts', action: 'show', id: @cart.id }) do %>
+          <i class="fa-solid fa-cart-shopping"></i>
+        <% end %>
         <%= @cart.amount.to_money.format.html_safe %>
       </div>
     </th>
