--- a/app/views/factory/admin/products/_edit_form.html.erb
+++ b/app/views/factory/admin/products/_edit_form.html.erb
@@ -1,6 +1,14 @@
-<%= form_with model: @product, scope: :product, url: { action: 'update' } do |f| %>
-  <%= render 'error_messages', target: f.object %>
-  <%= f.collection_select :product_taxon_id, @product_taxons, :id, :name %>
-  <%= render partial: 'form', locals: { f: f } %>
-  <%= f.submit %>
+<%= form_with model: @product, scope: :product, url: { action: 'update' }, class: 'modal-card' do |f| %>
+  <header class="modal-card-head">
+    <p class="modal-card-title"><%= t('.title') %></p>
+    <button class="delete" data-action="modal#close"></button>
+  </header>
+  <section class="modal-card-body">
+    <%= render 'error_messages', target: f.object %>
+    <%= f.collection_select :product_taxon_id, @product_taxons, :id, :name %>
+    <%= render partial: 'form', locals: { f: f } %>
+  </section>
+  <footer class="modal-card-foot is-block">
+    <%= f.submit %>
+  </footer>
 <% end %>
