--- a/app/views/factory/admin/productions/taxon.html.erb
+++ b/app/views/factory/admin/productions/taxon.html.erb
@@ -1,3 +1,5 @@
+<%= render 'product_taxon_bar' %>
+
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model %>
 <% end %>
