--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -22,13 +22,13 @@
 </td>
 <td>
   <p>
-    <%= link_to({ controller: 'in/product_taxons', action: 'import', id: model.id }, class: 'tag is-success') do %>
+    <%= link_to({ action: 'import', id: model.id }, class: 'tag is-success') do %>
       <i class="fa-solid fa-sign-in-alt"></i>
-      <span class="pl-1"><%= t('factory.in.product_taxons.import.title') %></span>
+      <span class="pl-1"><%= t('.import.title') %></span>
     <% end %>
   </p>
   <p>
-    <%= link_to({ controller: 'in/provides', product_taxon_id: model.id }, aria: { label: t('factory.in.provides.index.title') }, class: 'tag is-link') do %>
+    <%= link_to({ controller: 'provides', product_taxon_id: model.id }, aria: { label: t('.provides.index.title') }, class: 'tag is-link') do %>
       <i class="fa-solid fa-building"></i>
       <span class="pl-1"><%= model.provides_count %></span>
     <% end %>
