--- a/app/views/factory/admin/provideds/_new_form.html.erb
+++ b/app/views/factory/admin/provideds/_new_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: @part_provider, url: { action: 'create' }, class: 'modal-card' do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
-    <button class="delete" data-action="modal#close"></button>
+    <button type="button" data-action="modal#close" class="delete"></button>
   </header>
   <section class="modal-card-body">
     <%= render partial: 'form', locals: { f: f } %>
