--- a/app/views/factory/admin/product_taxons/_new_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_new_form.html.erb
@@ -1,5 +1,13 @@
-<%= form_with model: model, scope: model_name, url: { action: 'create', **params.permit(:factory_taxon_id) } do |f| %>
-  <%= render 'error_messages', target: f.object %>
-  <%= render partial: 'form', locals: { f: f } %>
-  <%= f.submit %>
+<%= form_with model: @product_taxon, url: { action: 'create', **params.permit(:factory_taxon_id) }, class: 'modal-card' do |f| %>
+  <header class="modal-card-head">
+    <p class="modal-card-title"><%= t('.title') %></p>
+    <button type="button" data-action="modal#close" class="delete"></button>
+  </header>
+  <section class="modal-card-body">
+    <%= render 'error_messages', target: f.object %>
+    <%= render partial: 'form', locals: { f: f } %>
+  </section>
+  <footer class="modal-card-foot">
+    <%= f.submit %>
+  </footer>
 <% end %>
