suppor vendor form clients

--- a/app/views/factory/admin/provides/_index/_vendor_tbody.html.erb
+++ b/app/views/factory/admin/provides/_index/_vendor_tbody.html.erb
@@ -1,7 +1,7 @@
 <td><%= model.name %></td>
-<td><%= model.id %></td>
+<td><%= model.client_organ_id %></td>
 <td>
-  <%= button_to({ action: 'create' }, params: { 'provide[provider_id]': model.id }, class: 'button is-small is-rounded is-light') do %>
+  <%= button_to({ action: 'create' }, params: { 'provide[provider_id]': model.client_organ_id }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-plus has-text-success"></i>
     <span class="pl-1"><%= t('.create.title') %></span>
   <% end %>
