--- a/app/views/factory/admin/products/_buy/_production.html.erb
+++ b/app/views/factory/admin/products/_buy/_production.html.erb
@@ -27,27 +27,11 @@
     </td>
   </tr>
   <% end %>
-  <tr>
   <% if item = @cart.organ_item(purchase_id: model.id, good_id: nil) %>
-
-    <td><%= item.organ&.name %>
-    <%= button_to({ controller: 'in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil } }) do %>
-      <i class="fa-solid fa-times has-text-danger"></i>
-    <% end if item.organ_id.present? %>
-    <%= button_to({ controller: 'in/items', action: 'edit_assign', id: item.id }) do %>
-      <i class="fa-solid fa-hand-point-right has-text-info"></i>
-    <% end %>
-    </td>
-      <td>
-        <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
-      </td>
+    <%= render partial: 'purchase_cart_assign', locals: { model: model, item: item } %>
   <% else %>
-      <td></td>
-      <td>
-    <%= render partial: 'add_purchase_cart', locals: { cart: @cart, item_con: 'trade/in/items', model: model, good_id: nil } %>
-      </td>
+    <%= render partial: 'add_purchase_cart_assign', locals: { model: model } %>
   <% end %>
-  </tr>
   </table>
 </td>
 <td>
