--- a/app/views/factory/admin/products/_buy/_index_table.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_table.html.erb
@@ -1,4 +1,4 @@
-<table class="table is-hoverable is-fullwidth">
+<table class="table is-fullwidth">
   <thead>
     <tr>
       <%= render 'index_thead' %>
