--- a/app/views/factory/in/items/_index/_index_tbody.html.erb
+++ b/app/views/factory/in/items/_index/_index_tbody.html.erb
@@ -1,4 +1,4 @@
-<td><%= model.member.name %></td>
+<td><%= model.member&.name %></td>
 <td>
   <p class="has-text-primary"><%= model.organ.name %></p>
   <p><%= model.good.name %></p>
