--- a/app/views/factory/admin/product_part_taxons/index.html.erb
+++ b/app/views/factory/admin/product_part_taxons/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'filter_form' %>
-<%= render 'button' %>
+<%= render 'index_bar' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_part_taxons, as: :model %>
