--- a/app/views/factory/admin/product_hosts/index.html.erb
+++ b/app/views/factory/admin/product_hosts/index.html.erb
@@ -1,6 +1,5 @@
-<%= render 'filter_form' %>
 <%= render 'filter_table' %>
-<%= render 'button' %>
+<%= render 'index_bar' %>
 
 <%= render layout: 'index_table' do %>
 <% @product_hosts.group_by(&->(i){ i.product.product_taxon }).each do |taxon, products| %>
