--- a/app/views/factory/admin/product_taxons/sort.html.erb
+++ b/app/views/factory/admin/product_taxons/sort.html.erb
@@ -1,4 +1,4 @@
-<%= render 'button' %>
+<%= render 'index_bar' %>
 
 <%= render layout: 'index_sortable_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_taxons, as: :model %>
