--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'product_taxon_bar' %>
 <%= render 'filter_form' %>
-<%= render 'button' %>
+<%= render 'index_bar' %>
 
 <%= render layout: 'index_sortable_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
