fix agent products

--- a/app/views/factory/agent/productions/index.html.erb
+++ b/app/views/factory/agent/productions/index.html.erb
@@ -4,5 +4,5 @@
   </div>
 </div>
 <div class="column is-narrow">
-  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts' } %>
+  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts', cart: @cart } %>
 </div>
