--- a/app/views/factory/productions/_index/_card.html.erb
+++ b/app/views/factory/productions/_index/_card.html.erb
@@ -12,7 +12,7 @@
   <% if item = @cart && @cart.find_item(good_id: model.id) %>
     <%= render partial: 'cart', locals: { cart: @cart, item_con: item_con, item: item } %>
   <% else %>
-    <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
+    <%= render partial: 'add_cart', locals: { cart: @cart, model: model, item_con: item_con } %>
   <% end %>
   </div>
 </div>
