--- a/app/views/factory/admin/base/_product_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_bar.html.erb
@@ -13,6 +13,12 @@
     <li class="<%= active_helper(controllers: 'products', active: 'is-active') %>">
       <%= link_to t('.products.index.title'), { controller: 'products', product_taxon_id: @product_taxon.id } %>
     </li>
+    <li class="<%= active_helper(controllers: 'products', active: 'is-active') %>">
+      <%= link_to({ controller: 'products', action: 'buy', product_taxon_id: @product_taxon.id }) do %>
+        <i class="fa-solid fa-store"></i>
+        <span class="pl-1"><%= t('.products.buy.title') %></span>
+      <% end %>
+    </li>
     <li class="<%= active_helper(controllers: 'productions', active: 'is-active') %>">
       <%= link_to t('.productions.taxon.title'), { controller: 'productions', action: 'taxon', product_taxon_id: @product_taxon.id } %>
     </li>
