--- a/app/views/factory/admin/productions/index.html.erb
+++ b/app/views/factory/admin/productions/index.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: 'product_bar', locals: { product: @product } %>
 <%= render 'index_bar' %>
+<%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model %>
