--- a/app/views/factory/admin/production_plans/index.html.erb
+++ b/app/views/factory/admin/production_plans/index.html.erb
@@ -3,7 +3,7 @@
 <%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_items, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_plans, as: :model %>
 <% end %>
 
-<%= paginate @production_items %>
+<%= paginate @production_plans %>
