--- a/app/views/factory/admin/stock_logs/index.html.erb
+++ b/app/views/factory/admin/stock_logs/index.html.erb
@@ -1,5 +1,5 @@
-<%= render 'filter_form' %>
-<%= render 'filter_table' %>
+<%= render 'production_bar' %>
+<%= render 'index_bar' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @stock_logs, as: :model %>
