--- a/app/views/factory/admin/productions/_show_table.html.erb
+++ b/app/views/factory/admin/productions/_show_table.html.erb
@@ -22,3 +22,7 @@
   <td class="has-text-right"><%= Factory::Production.human_attribute_name(:link) %></td>
   <td><%= @production.link %></td>
 </tr>
+<tr>
+  <td class="has-text-right"><%= Factory::Production.human_attribute_name(:stock) %></td>
+  <td><%= @production.stock %></td>
+</tr>
