--- a/app/views/factory/admin/production_plan_items/_index/_button.html.erb
+++ b/app/views/factory/admin/production_plan_items/_index/_button.html.erb
@@ -1,7 +1,7 @@
 <div class="buttons are-small mb-0">
   <%= form_with theme: nil, model: @production_item, url: { action: 'create' } do |f| %>
     <%= f.hidden_field :qr_code %>
-    <%= f.hidden_field :came_at, value: Time.current.to_s(:local) %>
+    <%= f.hidden_field :came_at, value: Time.current.to_fs(:local) %>
     <%= f.submit '新增', class: 'button is-info' %>
   <% end %>
   <%= form_with theme: nil, model: @production_item, url: { action: 'batch' }, class: 'ml-2' do |f| %>
