--- a/app/views/factory/in/items/_assign_form.html.erb
+++ b/app/views/factory/in/items/_assign_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @item, url: { action: 'update' } do |f| %>
+<%= form_with model: @item, url: { action: 'update_assign' }, method: :patch do |f| %>
   <%= render 'error_messages', target: f.object %>
   <%= f.collection_select :organ_id, @providers, :id, :name %>
   <%= f.submit %>
