--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -1,10 +1,10 @@
 <div data-controller="menu empty" class="<%= active_helper(modules: ['factory/admin', 'factory/in'], active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>">
-  <a class="menu-label" data-action="menu#toggle">
+  <a data-action="menu#toggle" class="menu-label">
     <i class="fa-solid fa-fw fa-store"></i>
     <span><%= t('factory.admin.title') %></span>
     <i class="fa-solid fa-fw dropdown"></i>
   </a>
-  <div class="menu-list" data-empty-target="content">
+  <div data-empty-target="content" class="menu-list">
     <%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'factory/admin/product_taxons' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.products.all.title'), { controller: 'factory/admin/products', action: 'all' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
