--- a/app/views/factory/admin/product_taxons/_index/_button.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_button.html.erb
@@ -1,5 +1,5 @@
 <div class="buttons are-small mb-0">
-  <%= link_to({ action: 'all', **request.query_parameters.except(:id) }, class: 'button is-link') do %>
+  <%= link_to({ action: 'all', **request.query_parameters.except(:id) }, class: 'button is-link mb-0') do %>
     <i class="fa-solid fa-plus"></i>
     <span class="pl-1"><%= t('.all.title') %></span>
   <% end %>
