--- a/app/views/factory/admin/product_taxons/_index/_filter_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_filter_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with theme: 'search', model: Factory::ProductTaxon.new do |f| %>
   <div class="field-body">
-    <%= f.text_field :name %>
+    <%= f.text_field :name, autocomplete: 'off' %>
     <div class="field is-narrow">
       <%= f.submit %>
     </div>
