--- a/app/views/factory/admin/base/_product_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_bar.html.erb
@@ -7,9 +7,6 @@
     <li class="<%= active_helper(product_taxons: ['show', 'edit'], active: 'is-active') %>">
       <%= link_to t('.product_taxons.show.title'), { controller: 'product_taxons', action: 'show', id: @product_taxon.id } %>
     </li>
-    <li class="<%= active_helper(product_taxons: ['import'], active: 'is-active') %>">
-      <%= link_to t('.product_taxons.import.title'), { controller: 'product_taxons', action: 'import', id: @product_taxon.id } %>
-    </li>
     <li class="<%= active_helper(products: ['index'], active: 'is-active') %>">
       <%= link_to t('.products.index.title'), { controller: 'products', product_taxon_id: @product_taxon.id } %>
     </li>
@@ -22,8 +19,17 @@
     <li class="<%= active_helper(controllers: 'productions', active: 'is-active') %>">
       <%= link_to t('.productions.taxon.title'), { controller: 'productions', action: 'taxon', product_taxon_id: @product_taxon.id } %>
     </li>
+    <li class="<%= active_helper(product_taxons: ['import'], active: 'is-active') %>">
+      <%= link_to({ controller: 'product_taxons', action: 'import', id: @product_taxon.id }) do %>
+        <i class="fa-solid fa-sign-in-alt"></i>
+        <span class="pl-1"><%= t('.product_taxons.import.title') %></span>
+      <% end %>
+    </li>
     <li class="<%= active_helper(controllers: 'provides', active: 'is-active') %>">
-      <%= link_to t('.provides.index.title'), { controller: 'provides', product_taxon_id: @product_taxon.id } %>
+      <%= link_to({ controller: 'provides', product_taxon_id: @product_taxon.id }) do %>
+        <i class="fa-solid fa-building"></i>
+        <span class="pl-1"><%= t('.provides.index.title') %></span>
+      <% end %>
     </li>
   </ul>
 </div>
