--- a/app/views/factory/admin/product_part_taxons/_edit_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_edit_form.html.erb
@@ -1,7 +1,15 @@
-<%= form_with model: @product_part_taxon, url: { action: 'update' }, data: { controller: 'equal' } do |f| %>
-  <%= render 'error_messages', target: f.object %>
-  <%= f.text_field :name %>
-  <%= f.number_field :min_select, step: 1, data: { action: 'equal#update' } %>
-  <%= f.number_field :max_select, step: 1, data: { equal_target: 'goal' } %>
-  <%= f.submit %>
+<%= form_with model: @product_part_taxon, url: { action: 'update' }, data: { controller: 'equal' }, class: 'modal-card' do |f| %>
+  <header class="modal-card-head">
+    <p class="modal-card-title"><%= t('.title') %></p>
+    <button type="button" data-action="modal#close" class="delete"></button>
+  </header>
+  <section class="modal-card-body">
+    <%= render 'error_messages', target: f.object %>
+    <%= f.text_field :name %>
+    <%= f.number_field :min_select, step: 1, data: { action: 'equal#update' } %>
+    <%= f.number_field :max_select, step: 1, data: { equal_target: 'goal' } %>
+  </section>
+  <footer class="modal-card-foot">
+    <%= f.submit %>
+  </footer>
 <% end %>
