--- a/app/views/factory/admin/products/_all/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_all/_index_thead.html.erb
@@ -7,9 +7,9 @@
   </p>
   <p><%= Factory::Product.human_attribute_name(:description) %></p>
 </th>
+<th><%= Factory::Product.human_attribute_name(:product_taxon_id) %></th>
 <th>
   <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
   <p><%= Factory::Product.human_attribute_name(:serial_id) %></p>
 </th>
-<th></th>
 <th></th>
