--- a/app/views/factory/admin/products/_all/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_all/_index_tbody.html.erb
@@ -12,11 +12,11 @@
   <p class="has-text-grey"><%= model.description.to_s.truncate(27) %></p>
 </td>
 <td>
-  <p><%= model.brand&.name %></p>
-  <p class="has-text-grey"><%= model.product_taxon&.name %></p>
+  <p><%= model.product_taxon.name %></p>
 </td>
 <td>
-  <%= model.covers_attachments.size %>
+  <p><%= model.brand&.name %></p>
+  <p class="has-text-grey"><%# model.serial&.name %></p>
 </td>
 <td>
   <% model.product_part_taxons.each do |product_part_taxon| %>
