--- a/app/views/factory/admin/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_production.html.erb
@@ -8,7 +8,7 @@
   <table class="table is-borderless">
   <% model.parts.each do |part| %>
     <tr>
-      <td><span class="tag"><%= link_to part.name, { controller: 'parts', action: 'show', id: part.id } %></span></td>
+      <td><span class="tag"><%= link_to part.name, { controller: 'products', action: 'show', product_taxon_id: part.product_taxon_id, id: part.id } %></span></td>
       <td><%= part.price %></td>
     </tr>
   <% end %>
