--- a/app/views/factory/admin/provides/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/provides/_base/_index_tbody.html.erb
@@ -1,8 +1,10 @@
 <td>
+<% if model.provider %>
   <div class="is-several">
     <%= image_tag model.provider.logo, class: 'image is-24x24' if model.provider.logo.attached? %>
     <span><%= model.provider.name %></span>
   </div>
+<% end %>
 </td>
 <td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
 <td>
