--- a/app/views/factory/in/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/in/productions/_base/_index_tbody.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 </td>
 <td>
-  <%# link_to({ controller: 'productions', action: 'part', id: model.id }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%= button_to({ controller: 'admin/productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('factory.admin.productions.show.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-cube"></i>
-  <%# end %>
+  <% end %>
 </td>
