--- a/app/views/factory/admin/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tbody.html.erb
@@ -1,11 +1,9 @@
 <td><i class="fa-solid fa-fw fa-bars has-text-grey is-drawable"></i></td>
 <td>
-  <div class="is-several">
-    <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if model.logo.attached? %>
-    <%= link_to({ controller: 'productions', product_id: model.id }, text: true) do %>
-      <span><%= model.name %></span>
-    <% end %>
-  </div>
+  <%= link_to({ controller: 'productions', product_id: model.id }, text: true, class: 'is-several') do %>
+    <%= image_tag model.logo.variant(resize_to_limit: [32, 32]), class: 'image is-32x32' if model.logo.attached? %>
+    <span><%= model.name %></span>
+  <% end %>
   <p class="has-text-grey"><%= model.description.to_s.truncate(27) %></p>
 </td>
 <td>
