--- a/app/views/factory/admin/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tbody.html.erb
@@ -4,8 +4,8 @@
     <%= image_tag model.logo.variant(resize_to_limit: [32, 32]), class: 'image is-32x32' if model.logo.attached? %>
     <span><%= model.name %></span>
   <% end %>
-  <p class="has-text-grey"><%= model.description.to_s.truncate(27) %></p>
 </td>
+<td><%= model.description.to_s.truncate(27) %></td>
 <td>
   <p><%= model.brand&.name %></p>
 </td>
