--- a/app/views/factory/admin/products/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_base/_index_thead.html.erb
@@ -1,13 +1,11 @@
 <th style="width: 1.25em"></th>
 <th>
-  <p>
-    <span><%= Factory::Product.human_attribute_name(:name) %></span>
-    <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
-      <i class="fa-solid fa-cog"></i>
-    <% end %>
-  </p>
-  <p><%= Factory::Product.human_attribute_name(:description) %></p>
+  <span><%= Factory::Product.human_attribute_name(:name) %></span>
+  <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
+    <i class="fa-solid fa-cog"></i>
+  <% end %>
 </th>
+<th><%= Factory::Product.human_attribute_name(:description) %></th>
 <th>
   <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
   <p><%= Factory::Product.human_attribute_name(:serial_id) %></p>
