--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -4,6 +4,6 @@
   <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
 </th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
-<th colspan="2"></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:provides_count) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:partial) %></th>
