--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -7,32 +7,9 @@
 </td>
 <td><%= link_to model.products_count, { controller: 'products', product_taxon_id: model.id } %></td>
 <td>
-  <p>
-    <%= link_to({ controller: 'products', product_taxon_id: model.id }, class: 'tag is-primary') do %>
-      <i class="fa-solid fa-cubes"></i>
-      <span class="pl-1"><%= t('factory.admin.products.index.title') %></span>
-    <% end %>
-  </p>
-  <p>
-    <%= link_to({ controller: 'productions', action: 'taxon', product_taxon_id: model.id }, class: 'tag is-info') do %>
-      <i class="fa-solid fa-list"></i>
-      <span class="pl-1"><%= t('factory.admin.productions.taxon.title') %></span>
-    <% end %>
-  </p>
-</td>
-<td>
-  <p>
-    <%= link_to({ action: 'import', id: model.id }, class: 'tag is-success') do %>
-      <i class="fa-solid fa-sign-in-alt"></i>
-      <span class="pl-1"><%= t('.import.title') %></span>
-    <% end %>
-  </p>
-  <p>
-    <%= link_to({ controller: 'provides', product_taxon_id: model.id }, aria: { label: t('.provides.index.title') }, class: 'tag is-link') do %>
-      <i class="fa-solid fa-building"></i>
-      <span class="pl-1"><%= model.provides_count %></span>
-    <% end %>
-  </p>
+  <%= link_to({ controller: 'provides', product_taxon_id: model.id }, aria: { label: t('.provides.index.title') }) do %>
+    <span><%= model.provides_count %></span>
+  <% end %>
 </td>
 <th>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
