--- a/app/views/factory/admin/products/_show/_breadcrumb.html.erb
+++ b/app/views/factory/admin/products/_show/_breadcrumb.html.erb
@@ -1,12 +1,2 @@
-<li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons', anchor: "tr_#{@product_taxon.id}" } %></li>
-<li>
-  <div class="px-3">
-    <span><%= @product_taxon.name %></span>
-    <% if @product_taxon.factory_taxon %>
-      <span class="has-text-grey">（<%= @product_taxon.factory_taxon.name %>）</span>
-    <% end %>
-  </div>
-</li>
-<li><%= link_to t('.products.index.title'), { controller: 'products' } %></li>
-<li><span class="px-3"><%= @product.name %></span></li>
+<%= render 'product_breadcrumb' %>
 <li class="is-active"><%= t('.title') %></li>
