--- a/app/views/factory/admin/productions/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/productions/_index/_breadcrumb.html.erb
@@ -1,5 +1,2 @@
-<li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
-<li><span class="px-3"><%= @product.product_taxon.name %></span></li>
-<li><%= link_to t('.products.index.title'), { controller: 'products', product_taxon_id: @product.product_taxon_id, anchor: "tr_#{params[:product_id]}" } %></li>
-<li><span class="px-3"><%= @product.name %></span></li>
+<%= render 'product_breadcrumb' %>
 <li class="is-active"><%= t('.title') %></li>
