--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -29,9 +29,9 @@
       <i class="fa-solid fa-fw fa-sm fa-tags has-text-grey"></i>
     <% end %>
   </div>
-  <p class="has-block-right has-text-danger">
+  <div class="has-block-right has-text-danger">
     <span class="mr-5"><%= model.price.to_money.format.html_safe %></span>
-  </p>
+  </div>
 </td>
 <td>
   <div>
