--- a/app/views/factory/admin/base/_product_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_bar.html.erb
@@ -17,7 +17,10 @@
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'productions', active: 'is-active') %>">
-      <%= link_to t('.productions.taxon.title'), { controller: 'productions', action: 'taxon', product_taxon_id: @product_taxon.id } %>
+      <%= link_to({ controller: 'productions', action: 'taxon', product_taxon_id: @product_taxon.id }) do %>
+        <i class="fa-solid fa-list"></i>
+        <span class="pl-1"><%= t('.productions.taxon.title') %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(product_taxons: ['import'], active: 'is-active') %>">
       <%= link_to({ controller: 'product_taxons', action: 'import', id: @product_taxon.id }) do %>
