--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -32,7 +32,11 @@
           </div>
         </div>
         <div class="is-flex">
-          <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) } %>
+        <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+          <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
+        <% else %>
+          <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
+        <% end %>
         </div>
       </div>
       <% else %>
@@ -43,7 +47,11 @@
         <div class="has-block-space-between pb-1">
           <div class="has-inline-centered has-text-danger"><%= model.price.to_money.format.html_safe %></div>
           <div class="is-flex">
-            <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) } %>
+          <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+            <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
+          <% else %>
+            <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
+          <% end %>
           </div>
         </div>
       <% end %>
@@ -53,7 +61,11 @@
           <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
         </div>
         <div class="is-flex">
-          <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) } %>
+        <% if item = @cart&.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+          <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: item, cart: @cart } %>
+        <% else %>
+          <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
+        <% end %>
         </div>
       </div>
     <% end %>
