--- a/app/views/factory/admin/base/_production_breadcrumb.html.erb
+++ b/app/views/factory/admin/base/_production_breadcrumb.html.erb
@@ -1,5 +1,12 @@
 <li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
-<li><span class="px-3"><%= @production.product_taxon.name %></span></li>
+<li>
+  <div class="px-3">
+    <span><%= @production.product_taxon.name %></span>
+    <% if @production.product_taxon.factory_taxon %>
+      <span class="has-text-grey">（<%= @production.product_taxon.factory_taxon.name %>）</span>
+    <% end %>
+  </div>
+</li>
 <li><%= link_to t('.products.index.title'), { controller: 'products', product_taxon_id: @production.product_taxon_id, anchor: "tr_#{@production.product_id}" } %></li>
 <li><span class="px-3"><%= @production.product.name %></span></li>
 <li>
