--- a/app/views/factory/admin/purchase_items/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/purchase_items/_base/_index_tbody.html.erb
@@ -1,3 +1,4 @@
+<td><%= check_box_tag 'xx', model.id, false, id: nil %></td>
 <td><%= model.number.to_human %></td>
 <td><%= model.amount.to_money.format.html_safe %></td>
 <td><%= model.note %></td>
