--- a/app/views/factory/admin/purchase_items/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/purchase_items/_base/_index_thead.html.erb
@@ -1,3 +1,7 @@
+<th id="xxd" data-controller="check" data-check-check-commit-outlet="form">
+  <%= check_box_tag 'xxd', 'xx', false, data: { check_target: 'all', action: 'check#toggleAll' }, id: nil %>
+  <span data-check-target="total"></span>
+</th>
 <th><%= Trade::Item.human_attribute_name(:number) %></th>
 <th><%= Trade::Item.human_attribute_name(:amount) %></th>
 <th><%= Trade::Item.human_attribute_name(:note) %></th>
