--- a/app/views/factory/admin/purchase_items/_index/_filter_form.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_filter_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with theme: 'search', url: { action: params[:action] } do |f| %>
+<%= form_with theme: 'search', url: { action: params[:action] }, data: { switch_target: 'src' }, class: 'is-hidden' do |f| %>
   <div class="field-body">
-    <%= f.text_field :name %>
+    <%= f.text_field :uuid %>
     <div class="field is-narrow">
       <%= f.submit %>
       <%= link_to t('.clear'), filter_params(except: [:name]), class: 'button is-light' %>
