--- a/app/views/factory/admin/purchase_items/index.html.erb
+++ b/app/views/factory/admin/purchase_items/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'production_bar' %>
 <%= render 'index_bar' %>
+<%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @items, as: :model %>
