--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -1,4 +1,6 @@
-<th><%= Factory::ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
+<% if @product_taxons.keys.compact.size > 0 %>
+  <th><%= Factory::ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
+<% end %>
 <th>
   <p><%= Factory::ProductTaxon.human_attribute_name(:name) %></p>
   <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
