border-bottom width

--- a/app/views/factory/admin/product_taxons/_index/_taxon_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_taxon_tbody.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td rowspan="<%= size %>">
+  <td rowspan="<%= size %>" style="border-bottom-width: 0">
     <span class="has-text-grey"><%= taxon&.name %></span>
   </td>
 </tr>
