--- a/app/views/admin/_purchase_cart_assign.html.erb
+++ b/app/views/admin/_purchase_cart_assign.html.erb
@@ -5,11 +5,11 @@
         <i class="fa-solid fa-xl fa-circle-minus has-text-dark-grey"></i>
       </button>
     <% else %>
-      <%= button_to({ controller: 'in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart&.id }, state: 'redirect', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
+      <%= button_to({ controller: 'factory/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart&.id }, state: 'redirect', class: 'mr-1', form: { data: { turbo_scroll: true } }) do %>
         <i class="fa-solid fa-xl fa-circle-minus has-text-dark-grey"></i>
       <% end %>
     <% end %>
-    <%= form_with(theme: nil, scope: :item, url: { controller: 'in/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true }) do |f| %>
+    <%= form_with(theme: nil, scope: :item, url: { controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true }) do |f| %>
       <%= f.hidden_field :current_cart_id, value: @cart&.id %>
       <%= f.number_field :number, value: item.number.to_human, data: { action: 'change->input#form', modify_target: 'input' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
     <% end %>
@@ -20,11 +20,11 @@
   <td>
     <% if item.organ_id.present? %>
       <span><%= item.organ.name %></span>
-      <%= button_to({ controller: 'in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil } }) do %>
+      <%= button_to({ controller: 'factory/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil } }) do %>
         <i class="fa-solid fa-times has-text-danger"></i>
       <% end %>
     <% end %>
-    <%= button_to({ controller: 'in/items', action: 'edit_assign', id: item.id }) do %>
+    <%= button_to({ controller: 'factory/in/items', action: 'edit_assign', id: item.id }) do %>
       <i class="fa-solid fa-hand-point-right has-text-info"></i>
     <% end %>
   </td>
