--- a/app/views/factory/admin/base/_product_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_bar.html.erb
@@ -8,10 +8,10 @@
       <%= link_to t('.product_taxons.show.title'), { controller: 'product_taxons', action: 'show', id: @product_taxon.id } %>
     </li>
     <li class="<%= active_helper(products: ['index'], active: 'is-active') %>">
-      <%= link_to t('.products.index.title'), { controller: 'products', product_taxon_id: @product_taxon.id } %>
+      <%= link_to t('.products.index.title'), { controller: 'taxon/products', product_taxon_id: @product_taxon.id } %>
     </li>
     <li class="<%= active_helper(products: ['buy'], active: 'is-active') %>">
-      <%= link_to({ controller: 'products', action: 'buy', product_taxon_id: @product_taxon.id }) do %>
+      <%= link_to({ controller: 'taxon/products', action: 'buy', product_taxon_id: @product_taxon.id }) do %>
         <i class="fa-solid fa-store"></i>
         <span class="pl-1"><%= t('.products.buy.title') %></span>
       <% end %>
@@ -19,13 +19,13 @@
     <li class="<%= active_helper(controllers: 'productions', active: 'is-active') %>">
       <%= link_to({ controller: 'productions', action: 'taxon', product_taxon_id: @product_taxon.id }) do %>
         <i class="fa-solid fa-list"></i>
-        <span class="pl-1"><%= t('.productions.taxon.title') %></span>
+        <span class="pl-1"><%= t('factory.admin.productions.taxon.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(product_taxons: ['import'], active: 'is-active') %>">
       <%= link_to({ controller: 'product_taxons', action: 'import', id: @product_taxon.id }) do %>
         <i class="fa-solid fa-sign-in-alt"></i>
-        <span class="pl-1"><%= t('.product_taxons.import.title') %></span>
+        <span class="pl-1"><%= t('factory.admin.product_taxons.import.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'provides', active: 'is-active') %>">
