--- a/app/views/factory/admin/productions/_show_table.html.erb
+++ b/app/views/factory/admin/productions/_show_table.html.erb
@@ -3,6 +3,10 @@
   <td><%= @production.name %></td>
 </tr>
 <tr>
+  <td class="has-text-right"><%= Factory::Production.human_attribute_name(:title) %></td>
+  <td><%= @production.title %></td>
+</tr>
+<tr>
   <td class="has-text-right"><%= Factory::Production.human_attribute_name(:state) %></td>
   <td><%= @production.state_i18n %></td>
 </tr>
