--- a/app/views/factory/admin/products/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index/_index_thead.html.erb
@@ -2,11 +2,8 @@
   <p><%= Factory::Product.human_attribute_name(:name) %></p>
   <p><%= Factory::Product.human_attribute_name(:description) %></p>
 </th>
-<th><%= Factory::Product.human_attribute_name(:productions_count) %></th>
+<th><%= Factory::Production.human_attribute_name(:name) %></th>
+<th><%= Factory::Production.human_attribute_name(:stock) %></th>
 <th><%= Factory::Product.human_attribute_name(:product_taxon_id) %></th>
-<th>
-  <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
-  <p><%= Factory::Product.human_attribute_name(:serial_id) %></p>
-</th>
 <th></th>
 <th></th>
